[risk=low][no ticket] rm duplicated code for reporting system (#9096)